Closed
Bug 1541101
Opened 6 years ago
Closed 6 years ago
crash in [@ audiounit_stream_start ]
Categories
(Core :: Audio/Video: cubeb, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla68
People
(Reporter: achronop, Assigned: achronop)
References
Details
Crash Data
One of the crash: 017bdf06-fd65-474d-849b-6cb3c019040
Assignee | ||
Updated•6 years ago
|
Crash Signature: [@ audiounit_stream_start ]
Assignee | ||
Comment 1•6 years ago
|
||
Update cubeb from upstream, pick commits:
66d9c48 - audiounit: replace assert check with error handling. BMO 1541101 (#499)
f8a6768 - Make sure data_callback and state_callback are not null (#496)
681d4b7 - Release the CFStringRef object when it's no longer needed
b0140a5 - Release the dispatch queue when cubeb context is destroyed
6f2420d - wasapi: Assert COM is initialized in wasapi_init. (#493)
Assignee | ||
Comment 2•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/0c6cffcbd368ff7f78436c467029925513f29719
Bug 1541101 - Update cubeb from upstream to 66d9c48. r=kinetik
Updated•6 years ago
|
Assignee: nobody → achronop
Priority: -- → P2
Updated•6 years ago
|
status-firefox67:
--- → affected
status-firefox68:
--- → affected
Comment 3•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Comment 4•6 years ago
|
||
3 crashes only on beta, doesn't look like a good candidate for uplifting, marking as wontix for 67.
You need to log in
before you can comment on or make changes to this bug.
Description
•